examples/errors/use_uninit_var/main.lc

function main() {
    print(test);
    const test = 3;
    print(test);
}
